2005-12-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/package.py:
	  add a docstring
	* flumotion/common/setup.py:
	  add a log line
	* flumotion/job/main.py:
	  set up package path - needed to make projects work

2005-12-15  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/command/main.py (setup_reactor.refused) 
	(setup_reactor.failed): Quit the reactor on errors.
	(setup_reactor.failed, setup_reactor.refused): Or, stop it.

	* flumotion/admin/command/commands.py (get_component_uistate): Fix
	format string.

	* flumotion/admin/command/main.py (setup_reactor.refused) 
	(setup_reactor.failed): Fix prototypes.
	(setup_reactor): Remove default errback.

	* flumotion/admin/command/commands.py (do_getprop): Actually
	implemented.
	(get_component_uistate): New helper method to get a component's
	uistate.
	(do_listprops): New operation, lists the properties on a
	component.
	(avatarId): New parser.
	(commands): Update the commands list.

	* flumotion/twisted/flavors.py (StateCacheable.keys): New method
	on StateCacheable objects. Should just make these derive from dict
	somehow.
	(StateRemoteCache.keys): Add the method on the cached objects as
	well.

	* flumotion/admin/command/main.py: Load commands from
	flumotion.admin.command.commands.

	* flumotion/admin/command/Makefile.am (component_PYTHON): 
	* flumotion/admin/command/commands.py: New file, split out from
	main.py. Here's where all of the commands will get defined.

	* flumotion/admin/command/main.py: Implement a bit more; just need
	to implement do_getprop and I'm there.

2005-12-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion.spec.in:
	  add -command
	  fix double includes

2005-12-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  back down to gst-python 0.10.0
	* flumotion/component/producers/looper/looper.py:
	  move a regularly recurring debug line to log level 5
	  try to import discoverer and fail if not found
