@@ -4,7 +4,8 @@ componentdir = $(libdir)/flumotion/python/flumotion/admin/command
 component_PYTHON = \
 	__init__.py \
 	commands.py \
-	main.py
+	main.py \
+	utils.py
 
 clean-local:
 	rm -rf *.pyc *.pyo
